[workspace.package]
version = "0.0.0"                               # managed by cargo-workspaces, see below
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.79.0"
repository = "https://github.com/near/nearcore"
license = "MIT OR Apache-2.0"

[workspace.metadata.workspaces]
# Shared version of all public crates in the workspace.
# This is only used for crates that are not stable.
# Most crates are not stable on purpose, as maintaining API compatibility is a
# significant developer time expense. Please think thoroughly before adding
# anything to the list of stable crates.
# Only bump  0.x.* to 0.(x+1).0 on any nearcore release as nearcore does not guarantee
# semver compatibility. i.e. api can change without a protocol upgrade.
version = "0.20.1"
exclude = ["neard"]

[workspace]
resolver = "2"
members = [
    "chain/chain",
    "chain/chunks",
    "chain/client",
    "chain/client-primitives",
    "chain/epoch-manager",
    "chain/indexer",
    "chain/indexer-primitives",
    "chain/jsonrpc",
    "chain/jsonrpc-adversarial-primitives",
    "chain/jsonrpc-primitives",
    "chain/jsonrpc/client",
    "chain/jsonrpc/fuzz",
    "chain/jsonrpc/jsonrpc-tests",
    "chain/network",
    "chain/pool",
    "chain/rosetta-rpc",
    "chain/telemetry",
    "core/async",
    "core/async-derive",
    "core/chain-configs",
    "core/crypto",
    "core/dyn-configs",
    "core/o11y",
    "core/parameters",
    "core/primitives",
    "core/primitives-core",
    "core/store",
    "core/time",
    "genesis-tools/genesis-csv-to-json",
    "genesis-tools/genesis-populate",
    "genesis-tools/keypair-generator",
    "integration-tests",
    "nearcore",
    "neard",
    "runtime/near-vm/test-api",
    "runtime/near-vm/compiler",
    "runtime/near-vm/compiler-singlepass",
    "runtime/near-vm/engine",
    "runtime/near-vm/vm",
    "runtime/near-vm/types",
    "runtime/near-vm/wast",
    "runtime/near-vm/compiler-test-derive",
    "runtime/near-vm-runner",
    "runtime/near-vm-runner/fuzz",
    "runtime/near-wallet-contract",
    "runtime/runtime",
    "runtime/runtime-params-estimator",
    "runtime/runtime-params-estimator/estimator-warehouse",
    "test-utils/actix-test-utils",
    "test-utils/runtime-tester",
    "test-utils/runtime-tester/fuzz",
    "test-utils/store-validator",
    "test-utils/testlib",
    "tools/database",
    "tools/chainsync-loadtest",
    "tools/congestion-model",
    "tools/fork-network",
    "tools/indexer/example",
    "tools/mirror",
    "tools/mock-node",
    "tools/ping",
    "tools/restaked",
    "tools/rpctypegen/core",
    "tools/rpctypegen/macro",
    "tools/speedy_sync",
    "tools/state-parts",
    "tools/state-parts-dump-check",
    "tools/state-viewer",
    "tools/storage-usage-delta-calculator",
    "tools/themis",
    "tools/undo-block",
    "utils/config",
    "utils/fmt",
    "utils/mainnet-res",
    "utils/near-cache",
    "utils/stdx",
]
exclude = ["tracing", "benchmarks"]

[workspace.lints.clippy]
all = { level = "allow", priority = -100 }
correctness = { level = "deny", priority = -50 }
suspicious = { level = "deny", priority = -50 }
perf = { level = "deny", priority = -50 }
# overrides clippy::perf = "deny": https://github.com/rust-lang/rust-clippy/issues/8111
single_char_pattern = "allow"
clone_on_copy = "deny"
derivable_impls = "deny"
redundant_clone = "deny"
len_zero = "deny"
or_fun_call = "deny"
unnecessary_lazy_evaluations = "deny"


[workspace.dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-http = "3.6"
actix-rt = "2"
actix-web = "4.1"
anyhow = "1.0.62"
arbitrary = { version = "1.2.3", features = ["derive"] }
arc-swap = "1.5"
assert_matches = "1.5.0"
async-trait = "0.1.58"
aurora-engine-transactions = "1.1"
aurora-engine-types = "1.1"
awc = { version = "3", features = ["openssl"] }
backtrace = "0.3"
base64 = "0.21"
bencher = "0.1.5"
bitflags = "1.2"
blake2 = { version = "0.10.6", features = ["reset"] }
bn = { package = "zeropool-bn", version = "0.5.11", default-features = false }
# TODO: remove this override when https://github.com/camshaft/bolero/issues/196 is fixed upstream
# Currently the changes here are: https://github.com/camshaft/bolero/compare/master...Ekleog-NEAR:bolero:reduce-list-tests-run
bolero = { version = "0.10.0", git = "https://github.com/Ekleog-NEAR/bolero", rev = "c37993bd70dcf5b1778b03daf29f686225e9a504", features = [
    "arbitrary",
] }
borsh = { version = "1.0.0", features = ["derive", "rc"] }
bs58 = "0.4"
bytes = "1"
bytesize = { version = "1.1", features = ["serde"] }
cov-mark = "2.0.0-pre.1"
cargo_metadata = "0.14.1"
cc = "1.0"
cfg-if = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.2.0", features = ["derive", "env", "string"] }
cloud-storage = "0.11.1"
cpu-time = "1.0"
criterion = { version = "0.5.1", default_features = false, features = [
    "html_reports",
    "cargo_bench_support",
] }
crossbeam = "0.8"
crossbeam-channel = "0.5.8"
csv = "1.2.1"
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "rand_core",
] }
derive-enum-from-into = "0.1.1"
derive_more = "0.99.9"
derive-where = "1.2.7"
dirs = "4"
dynasm = "2.0"
dynasmrt = "2.0"
easy-ext = "0.2"
ed25519-dalek = { version = "2.1.0", default-features = false, features = [
    "hazmat",
    "rand_core",
] }
enum-map = "2.1.0"
enumset = "1.0"
ethabi = "18"
expect-test = "1.3.0"
finite-wasm = "0.5.0"
fs2 = "0.4"
futures = "0.3.5"
futures-util = "0.3"
genesis-populate = { path = "genesis-tools/genesis-populate" }
hashbrown = "0.14.2"
hex = { version = "0.4.2", features = ["serde"] }
hex-literal = "0.2"
hkdf = "0.12.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
im = "15"
indexmap = "1.6"
indicatif = { version = "0.15.0", features = ["with_rayon"] }
insta = { version = "1.37.0", features = ["json", "yaml", "redactions"] }
integration-tests = { path = "integration-tests" }
itertools = "0.10.0"
itoa = "1.0"
json_comments = "0.2.1"
lazy_static = "1.4"
libc = "0.2.81"
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
log = "0.4"
lru = "0.12.3"
memoffset = "0.8"
more-asserts = "0.2"
near-account-id = { version = "1.0.0-alpha.4", features = [
    "internal_unstable",
    "serde",
    "borsh",
] }
near-actix-test-utils = { path = "test-utils/actix-test-utils" }
near-amend-genesis = { path = "tools/amend-genesis" }
near-database-tool = { path = "tools/database" }
near-async = { path = "core/async" }
near-async-derive = { path = "core/async-derive" }
near-cache = { path = "utils/near-cache" }
near-chain = { path = "chain/chain" }
near-chain-configs = { path = "core/chain-configs" }
near-chain-primitives = { path = "chain/chain-primitives" }
near-chunks = { path = "chain/chunks" }
near-chunks-primitives = { path = "chain/chunks-primitives" }
near-client = { path = "chain/client" }
near-client-primitives = { path = "chain/client-primitives" }
near-cold-store-tool = { path = "tools/cold-store", package = "cold-store-tool" }
near-config-utils = { path = "utils/config" }
nearcore = { path = "nearcore" }
near-crypto = { path = "core/crypto" }
near-dyn-configs = { path = "core/dyn-configs" }
near-epoch-manager = { path = "chain/epoch-manager" }
near-epoch-sync-tool = { path = "tools/epoch-sync" }
near-flat-storage = { path = "tools/flat-storage" }
near-fork-network = { path = "tools/fork-network" }
near-fmt = { path = "utils/fmt" }
near-indexer = { path = "chain/indexer" }
near-indexer-primitives = { path = "chain/indexer-primitives" }
near-jsonrpc = { path = "chain/jsonrpc" }
near-jsonrpc-adversarial-primitives = { path = "chain/jsonrpc-adversarial-primitives" }
near-jsonrpc-client = { path = "chain/jsonrpc/client" }
near-jsonrpc-primitives = { path = "chain/jsonrpc-primitives", features = [
    "full",
] }
near-jsonrpc-tests = { path = "chain/jsonrpc/jsonrpc-tests" }
near-mainnet-res = { path = "utils/mainnet-res" }
near-mirror = { path = "tools/mirror" }
near-network = { path = "chain/network" }
near-o11y = { path = "core/o11y" }
near-parameters = { path = "core/parameters" }
near-performance-metrics = { path = "utils/near-performance-metrics" }
near-performance-metrics-macros = { path = "utils/near-performance-metrics-macros" }
near-ping = { path = "tools/ping" }
near-pool = { path = "chain/pool" }
near-primitives = { path = "core/primitives" }
near-primitives-core = { path = "core/primitives-core" }
near-rosetta-rpc = { path = "chain/rosetta-rpc" }
near-rpc-error-core = { path = "tools/rpctypegen/core" }
near-rpc-error-macro = { path = "tools/rpctypegen/macro" }
near-state-parts = { path = "tools/state-parts" }
near-state-parts-dump-check = { path = "tools/state-parts-dump-check" }
near-state-viewer = { path = "tools/state-viewer", package = "state-viewer" }
near-store = { path = "core/store" }
near-telemetry = { path = "chain/telemetry" }
near-test-contracts = { path = "runtime/near-test-contracts" }
near-time = { path = "core/time" }
near-undo-block = { path = "tools/undo-block" }
near-vm-test-api = { path = "runtime/near-vm/test-api" }
near-vm-compiler = { path = "runtime/near-vm/compiler" }
near-vm-compiler-singlepass = { path = "runtime/near-vm/compiler-singlepass" }
near-vm-compiler-test-derive = { path = "runtime/near-vm/compiler-test-derive" }
near-vm-engine = { path = "runtime/near-vm/engine" }
near-vm-runner = { path = "runtime/near-vm-runner" }
near-vm-test-generator = { path = "runtime/near-vm/test-generator" }
near-vm-types = { path = "runtime/near-vm/types" }
near-vm-vm = { path = "runtime/near-vm/vm" }
near-vm-wast = { path = "runtime/near-vm/wast" }
near-wallet-contract = { path = "runtime/near-wallet-contract" }
nix = "0.24"
node-runtime = { path = "runtime/runtime" }
num-bigint = "0.3"
num_cpus = "1.11"
num-rational = { version = "0.3.1", features = ["serde"] }
num-traits = "0.2.15"
once_cell = "1.13.1"
openssl = { version = "0.10.60", features = ["vendored"] }
openssl-probe = "0.1.4"
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
paperclip = { version = "0.8.0", features = ["actix4"] }
parity-wasm = { version = "0.42", default-features = false }
parity-wasm_41 = { package = "parity-wasm", version = "0.41" }
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
pin-project = "1.0"
prefix-sum-vec = "0.1.2"
pretty_assertions = "1.2"
primitive-types = { version = "0.10", default-features = false }
proc-macro2 = "1.0.64"
prometheus = "0.13.1"
protobuf = "3.0.1"
protobuf-codegen = "3.0.1"
pwasm-utils_12 = { package = "pwasm-utils", version = "0.12" }
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.5"
rand_hc = "0.3.1"
rand_xorshift = "0.3"
rayon = "1.5"
redis = "0.23.0"
reed-solomon-erasure = "6.0.0"
regex = "1.7.1"
region = "3.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
ripemd = "0.1.1"
rkyv = "0.7.31"
rlimit = "0.7"
rlp = "0.5.2"
rocksdb = { version = "0.21.0", default-features = false, features = [
    "snappy",
    "lz4",
    "zstd",
    "zlib",
    "jemalloc",
] }
runtime-tester = { path = "test-utils/runtime-tester" }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "functions"] }
rustc-demangle = "0.1"
rust-s3 = { version = "0.32.3", features = ["blocking"] }
rustix = "0.38"
secp256k1 = { version = "0.27.0", features = ["recovery", "rand-std"] }
semver = "1.0.4"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_ignored = "0.1"
serde_json = "1.0.68"
serde_repr = "0.1.8"
serde_with = { version = "3.0", features = ["base64"] }
serde_yaml = "0.9"
serial_test = "0.5"
sha2 = "0.10"
sha3 = "0.10"
smallvec = "1.6"
smart-default = "0.6"
smartstring = "1.0.1"
strum = { version = "0.24", features = ["derive"] }
stun = "0.4"
subtle = "2.2"
syn = { version = "2.0.4", features = ["extra-traits", "full"] }
sysinfo = "0.24.5"
target-lexicon = { version = "0.12.2", default-features = false }
tempfile = "3.3"
testlib = { path = "test-utils/testlib" }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
thiserror = "1.0.30"
tikv-jemallocator = "0.5.0"
time = { version = "0.3.9", features = ["parsing", "serde"] }
tokio = { version = "1.28", default-features = false }
tokio-stream = { version = "0.1.2", features = ["net"] }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
toml = "0.5.8"
tqdm = "0.4.4"
tracing = { version = "0.1.40", features = ["std"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-span-tree = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
trybuild = "1.0.11"
turn = "0.6"
wasm-encoder = "0.27.0"
wasmer-compiler = { package = "wasmer-compiler-near", version = "=2.4.1" }
wasmer-compiler-singlepass = { package = "wasmer-compiler-singlepass-near", version = "=2.4.1" }
wasmer-engine = { package = "wasmer-engine-near", version = "=2.4.1" }
wasmer-engine-universal = { package = "wasmer-engine-universal-near", version = "=2.4.1", features = [
    "compiler",
] }
wasmer-runtime = { version = "0.18.0", package = "wasmer-runtime-near", features = [
    "default-backend-singlepass",
], default-features = false }
wasmer-runtime-core = { version = "0.18.2", package = "wasmer-runtime-core-near" }
wasmer-types = { package = "wasmer-types-near", version = "=2.4.1" }
wasmer-vm = { package = "wasmer-vm-near", version = "=2.4.1" }
wasmparser = "0.78" # TODO: unify at least the versions of wasmparser we have in our codebase
wasmprinter = "0.2"
wasm-smith = "0.10"
wasmtime = { version = "14.0.4", default-features = false, features = [
    "cranelift",
] }
wast = "40.0"
wat = "1.0.40"
webrtc-util = "0.7"
winapi = { version = "0.3", features = [
    "winbase",
    "memoryapi",
    "errhandlingapi",
    "winnt",
    "impl-default",
] }
xshell = "0.2.1"
xz2 = "0.1.6"
yansi = "0.5.1"
zstd = "0.13.1"

stdx = { package = "near-stdx", path = "utils/stdx" }

[patch.crates-io]
protobuf = { git = "https://github.com/near/rust-protobuf.git", branch = "3.0.2-patch" }
protobuf-support = { git = "https://github.com/near/rust-protobuf.git", branch = "3.0.2-patch" }

# Note that "bench" profile inherits from "release" profile and
# "test" profile inherits from "dev" profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#test

[profile.dev]
panic = 'abort'

[profile.release]
overflow-checks = true
panic = 'abort'
lto = "fat"
codegen-units = 1

# A much faster to compile version of `release`, for development use.
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
debug-assertions = true

# Used for fuzzing, LTO is ill-supported as of 2023-09 and so should not be enabled.
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

# Compile some dependencies with optimizations to speed up tests.
[profile.dev.package.hex]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.bs58]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.unsafe-libyaml]
opt-level = 3
[profile.dev.package.hashbrown]
opt-level = 3
[profile.dev.package.dynasmrt]
opt-level = 3
[profile.dev.package."*"]
opt-level = 1
