[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
actix-rt.workspace = true
actix.workspace = true
anyhow.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
primitive-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
stdx.workspace = true
strum.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
wat.workspace = true

near-actix-test-utils.workspace = true
near-async.workspace = true
near-chain.workspace = true
near-chain-configs.workspace = true
near-chunks.workspace = true
near-client.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-fmt.workspace = true
near-jsonrpc.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-network.workspace = true
near-primitives.workspace = true
near-primitives-core.workspace = true
near-store.workspace = true
near-o11y.workspace = true
near-telemetry.workspace = true
near-test-contracts.workspace = true
near-performance-metrics.workspace = true
near-undo-block.workspace = true
near-vm-runner.workspace = true
nearcore.workspace = true
node-runtime.workspace = true
testlib.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta.workspace = true

[features]
performance_stats = [
  "nearcore/performance_stats",
  "near-network/performance_stats",
]
expensive_tests = []
test_features = [
  "nearcore/test_features",
  "near-store/test_features",
]
protocol_feature_fix_contract_loading_cost = [
  "nearcore/protocol_feature_fix_contract_loading_cost",
]
protocol_feature_block_header_v4 = ["near-primitives/protocol_feature_block_header_v4"]
protocol_feature_reject_blocks_with_outdated_protocol_version = [
  "near-primitives/protocol_feature_reject_blocks_with_outdated_protocol_version",
  "near-chain/protocol_feature_reject_blocks_with_outdated_protocol_version"
]

nightly = [
  "nightly_protocol",
  "protocol_feature_block_header_v4",
  "protocol_feature_fix_contract_loading_cost",
  "protocol_feature_reject_blocks_with_outdated_protocol_version",
  "near-actix-test-utils/nightly",
  "near-async/nightly",
  "near-chain-configs/nightly",
  "near-chain/nightly",
  "near-chunks/nightly",
  "near-client-primitives/nightly",
  "near-client/nightly",
  "near-epoch-manager/nightly",
  "near-fmt/nightly",
  "near-jsonrpc-client/nightly",
  "near-jsonrpc-primitives/nightly",
  "near-jsonrpc/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-primitives-core/nightly",
  "near-primitives/nightly",
  "near-store/nightly",
  "near-telemetry/nightly",
  "near-undo-block/nightly",
  "near-vm-runner/nightly",
  "nearcore/nightly",
  "node-runtime/nightly",
  "testlib/nightly",
]
nightly_protocol = [
  "near-actix-test-utils/nightly_protocol",
  "near-async/nightly_protocol",
  "near-chain-configs/nightly_protocol",
  "near-chain/nightly_protocol",
  "near-chunks/nightly_protocol",
  "near-client-primitives/nightly_protocol",
  "near-client/nightly_protocol",
  "near-epoch-manager/nightly_protocol",
  "near-fmt/nightly_protocol",
  "near-jsonrpc-client/nightly_protocol",
  "near-jsonrpc-primitives/nightly_protocol",
  "near-jsonrpc/nightly_protocol",
  "near-network/nightly_protocol",
  "near-o11y/nightly_protocol",
  "near-primitives-core/nightly_protocol",
  "near-primitives/nightly_protocol",
  "near-store/nightly_protocol",
  "near-telemetry/nightly_protocol",
  "near-undo-block/nightly_protocol",
  "near-vm-runner/nightly_protocol",
  "nearcore/nightly_protocol",
  "node-runtime/nightly_protocol",
  "testlib/nightly_protocol",
]
sandbox = [
  "near-chain/sandbox",
  "node-runtime/sandbox",
  "near-client/sandbox",
]
no_cache = ["nearcore/no_cache"]
calimero_zero_storage = []
