[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix-rt.workspace = true
actix.workspace = true
anyhow.workspace = true
bytesize.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
primitive-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
stdx.workspace = true
strum.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
wat.workspace = true

near-actix-test-utils.workspace = true
near-async.workspace = true
near-chain.workspace = true
near-chain-configs.workspace = true
near-chunks.workspace = true
near-client.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-fmt.workspace = true
near-jsonrpc.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-network.workspace = true
near-parameters.workspace = true
near-primitives.workspace = true
near-primitives-core.workspace = true
near-store.workspace = true
near-o11y.workspace = true
near-telemetry.workspace = true
near-test-contracts.workspace = true
near-performance-metrics.workspace = true
near-vm-runner = { workspace = true, features = [ "prepare" ] }
near-wallet-contract.workspace = true
nearcore.workspace = true
node-runtime.workspace = true
testlib.workspace = true

[dev-dependencies]
assert_matches.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
derive-enum-from-into.workspace = true
ethabi.workspace = true
insta.workspace = true
near-undo-block.workspace = true
rlp.workspace = true
sha3.workspace = true

[features]
performance_stats = [
  "nearcore/performance_stats",
  "near-network/performance_stats",
]
expensive_tests = []
test_features = ["nearcore/test_features", "near-store/test_features"]
protocol_feature_fix_contract_loading_cost = [
  "nearcore/protocol_feature_fix_contract_loading_cost",
]
protocol_feature_reject_blocks_with_outdated_protocol_version = [
  "near-primitives/protocol_feature_reject_blocks_with_outdated_protocol_version",
  "near-chain/protocol_feature_reject_blocks_with_outdated_protocol_version",
]
protocol_feature_nonrefundable_transfer_nep491 = [
  "near-primitives/protocol_feature_nonrefundable_transfer_nep491",
]

nightly = [
  "near-actix-test-utils/nightly",
  "near-async/nightly",
  "near-chain-configs/nightly",
  "near-chain/nightly",
  "near-chunks/nightly",
  "near-client-primitives/nightly",
  "near-client/nightly",
  "near-epoch-manager/nightly",
  "near-fmt/nightly",
  "near-jsonrpc-client/nightly",
  "near-jsonrpc-primitives/nightly",
  "near-jsonrpc/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-parameters/nightly",
  "near-primitives-core/nightly",
  "near-primitives/nightly",
  "near-store/nightly",
  "near-telemetry/nightly",
  "near-undo-block/nightly",
  "near-vm-runner/nightly",
  "near-wallet-contract/nightly",
  "nearcore/nightly",
  "nightly_protocol",
  "node-runtime/nightly",
  "protocol_feature_fix_contract_loading_cost",
  "protocol_feature_nonrefundable_transfer_nep491",
  "protocol_feature_reject_blocks_with_outdated_protocol_version",
  "testlib/nightly",
]
nightly_protocol = [
  "near-actix-test-utils/nightly_protocol",
  "near-async/nightly_protocol",
  "near-chain-configs/nightly_protocol",
  "near-chain/nightly_protocol",
  "near-chunks/nightly_protocol",
  "near-client-primitives/nightly_protocol",
  "near-client/nightly_protocol",
  "near-epoch-manager/nightly_protocol",
  "near-fmt/nightly_protocol",
  "near-jsonrpc-client/nightly_protocol",
  "near-jsonrpc-primitives/nightly_protocol",
  "near-jsonrpc/nightly_protocol",
  "near-network/nightly_protocol",
  "near-o11y/nightly_protocol",
  "near-parameters/nightly_protocol",
  "near-primitives-core/nightly_protocol",
  "near-primitives/nightly_protocol",
  "near-store/nightly_protocol",
  "near-telemetry/nightly_protocol",
  "near-undo-block/nightly_protocol",
  "near-vm-runner/nightly_protocol",
  "near-wallet-contract/nightly_protocol",
  "nearcore/nightly_protocol",
  "node-runtime/nightly_protocol",
  "testlib/nightly_protocol",
]
statelessnet_protocol = [
  "near-chain/statelessnet_protocol",
  "near-primitives/statelessnet_protocol",
]
sandbox = ["near-chain/sandbox", "node-runtime/sandbox", "near-client/sandbox"]
no_cache = ["nearcore/no_cache"]
calimero_zero_storage = []
new_epoch_sync = ["nearcore/new_epoch_sync"]
