[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix-rt.workspace = true
actix.workspace = true
anyhow.workspace = true
bytesize.workspace = true
borsh.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
num-rational.workspace = true
parking_lot.workspace = true
primitive-types.workspace = true
rand.workspace = true
serde_json.workspace = true
stdx.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
wat.workspace = true

near-actix-test-utils.workspace = true
near-async.workspace = true
near-chain.workspace = true
near-chain-configs.workspace = true
near-chunks.workspace = true
near-client.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-fmt.workspace = true
near-jsonrpc.workspace = true
near-jsonrpc-client-internal.workspace = true
near-jsonrpc-primitives.workspace = true
near-network.workspace = true
near-parameters.workspace = true
near-primitives.workspace = true
near-primitives-core.workspace = true
near-store.workspace = true
near-o11y.workspace = true
near-telemetry.workspace = true
near-test-contracts.workspace = true
near-rosetta-rpc.workspace = true
near-vm-runner = { workspace = true, features = ["prepare"] }
near-wallet-contract.workspace = true
nearcore.workspace = true
node-runtime.workspace = true
testlib.workspace = true

[dev-dependencies]
near-primitives = { workspace = true, features = ["clock", "solomon", "rand"] }
assert_matches.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
derive_builder.workspace = true
ethabi.workspace = true
insta.workspace = true
near-state-viewer.workspace = true
near-undo-block.workspace = true
rlp.workspace = true
sha3.workspace = true
regex.workspace = true
rand_chacha.workspace = true

[features]
performance_stats = [
  "nearcore/performance_stats",
  "near-network/performance_stats",
]
expensive_tests = []
test_features = [
  "nearcore/test_features",
  "near-store/test_features",
  "near-vm-runner/test_features",
  "near-test-contracts/test_features",
]

nightly = [
  "near-actix-test-utils/nightly",
  "near-async/nightly",
  "near-chain-configs/nightly",
  "near-chain/nightly",
  "near-chunks/nightly",
  "near-client-primitives/nightly",
  "near-client/nightly",
  "near-epoch-manager/nightly",
  "near-fmt/nightly",
  "near-jsonrpc-client-internal/nightly",
  "near-jsonrpc-primitives/nightly",
  "near-jsonrpc/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-parameters/nightly",
  "near-primitives-core/nightly",
  "near-primitives/nightly",
  "near-rosetta-rpc/nightly",
  "near-store/nightly",
  "near-telemetry/nightly",
  "near-undo-block/nightly",
  "near-vm-runner/nightly",
  "near-wallet-contract/nightly",
  "nearcore/nightly",
  "node-runtime/nightly",
  "testlib/nightly",
]
sandbox = [
  "near-chain/sandbox",
  "near-client/sandbox",
  "near-o11y/sandbox",
  "node-runtime/sandbox",
]
calimero_zero_storage = []
