[package]
name = "near"
version = "0.4.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "0.8.1"
byteorder = "1.2"
kvdb = "0.1"
kvdb-memorydb = "0.1"
log = "0.4"
env_logger = "0.6.0"
chrono = { version = "0.4.4", features = ["serde"] }
git-version = "0.3.1"
futures = "0.1"
clap = "2.32"
rand = "0.6.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dirs = "1.0.5"
lazy_static = "1.4"

borsh = "0.2.5"

near-crypto = { path = "../core/crypto" }
near-primitives = { path = "../core/primitives" }
near-store = { path = "../core/store" }
node-runtime = { path = "../runtime/runtime" }
near-chain = { path = "../chain/chain" }
near-client = { path = "../chain/client" }
near-pool = { path = "../chain/pool" }
near-network = { path = "../chain/network" }
near-jsonrpc = { path = "../chain/jsonrpc" }
near-telemetry = { path = "../chain/telemetry" }
near-epoch-manager = { path = "../chain/epoch_manager" }

[dev-dependencies]
tempdir = "0.3"
tokio = "0.1"
testlib = { path = "../test-utils/testlib" }
