[package]
name = "near"
version = "0.4.11"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
byteorder = "1.2"
rocksdb = "0.13"
log = "0.4"
env_logger = "0.7"
chrono = { version = "0.4.4", features = ["serde"] }
git-version = "0.3.1"
futures = "0.3"
clap = "2.32"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
dirs = "2.0.2"
borsh = "0.2.10"
tracing = "0.1"
tracing-subscriber = "0.1.6"

near-crypto = { path = "../core/crypto" }
near-primitives = { path = "../core/primitives" }
near-store = { path = "../core/store" }
node-runtime = { path = "../runtime/runtime" }
near-chain = { path = "../chain/chain" }
near-chunks = { path = "../chain/chunks"}
near-client = { path = "../chain/client" }
near-pool = { path = "../chain/pool" }
near-network = { path = "../chain/network" }
near-jsonrpc = { path = "../chain/jsonrpc" }
near-telemetry = { path = "../chain/telemetry" }
near-epoch-manager = { path = "../chain/epoch_manager" }

[dev-dependencies]
tempdir = "0.3"
testlib = { path = "../test-utils/testlib" }
