[package]
name = "nearcore"
version = "0.0.0"
authors.workspace = true
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version.workspace = true
edition.workspace = true

[dependencies]
actix-rt.workspace = true
actix-web.workspace = true
actix.workspace = true
anyhow.workspace = true
awc.workspace = true
borsh.workspace = true
byteorder.workspace = true
chrono.workspace = true
dirs.workspace = true
easy-ext.workspace = true
futures.workspace = true
hyper-tls.workspace = true
hyper.workspace = true
indicatif.workspace = true
near-rust-allocator-proxy = { workspace = true, optional = true }
num-rational.workspace = true
once_cell.workspace = true
rand.workspace = true
rayon.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
xz2.workspace = true

near-chain = { path = "../chain/chain" }
near-chain-configs = { path = "../core/chain-configs" }
near-chunks = { path = "../chain/chunks" }
near-client = { path = "../chain/client" }
near-client-primitives = {path = "../chain/client-primitives"}
near-crypto = { path = "../core/crypto" }
near-epoch-manager = { path = "../chain/epoch-manager" }
near-jsonrpc = { path = "../chain/jsonrpc", optional = true }
near-mainnet-res = { path = "../utils/mainnet-res" }
near-network = { path = "../chain/network" }
near-o11y = { path = "../core/o11y" }
near-performance-metrics = { path = "../utils/near-performance-metrics" }
near-pool = { path = "../chain/pool" }
near-primitives = { path = "../core/primitives" }
near-rosetta-rpc = { path = "../chain/rosetta-rpc", optional = true }
near-store = { path = "../core/store" }
near-telemetry = { path = "../chain/telemetry" }
near-vm-runner = { path = "../runtime/near-vm-runner"}
node-runtime = { path = "../runtime/runtime" }

delay-detector = { path = "../tools/delay-detector" }

[dev-dependencies]
bencher.workspace = true
primitive-types.workspace = true

near-actix-test-utils = { path = "../test-utils/actix-test-utils" }
near-jsonrpc-primitives = { path = "../chain/jsonrpc-primitives" }
testlib = { path = "../test-utils/testlib" }

[[bench]]
name = "store"
harness = false

[features]
default = ["json_rpc", "rosetta_rpc"]

performance_stats = [
  "near-performance-metrics/performance_stats",
  "near-rust-allocator-proxy",
]
memory_stats = ["near-performance-metrics/memory_stats"]
c_memory_stats = ["near-performance-metrics/c_memory_stats"]
test_features = [
  "near-client/test_features",
  "near-network/test_features",
  "near-store/test_features",
  "near-jsonrpc/test_features"
]
expensive_tests = [
  "near-client/expensive_tests",
  "near-epoch-manager/expensive_tests",
  "near-chain/expensive_tests",
]
no_cache = [
  "node-runtime/no_cache",
  "near-store/no_cache",
  "near-chain/no_cache",
  "near-epoch-manager/no_cache",
]
delay_detector = ["near-client/delay_detector", "delay-detector/delay_detector"]
rosetta_rpc = ["near-rosetta-rpc"]
json_rpc = ["near-jsonrpc"]
protocol_feature_fix_staking_threshold = [
  "near-primitives/protocol_feature_fix_staking_threshold",
  "near-epoch-manager/protocol_feature_fix_staking_threshold",
]
protocol_feature_fix_contract_loading_cost = [
  "near-vm-runner/protocol_feature_fix_contract_loading_cost",
]
protocol_feature_flat_state = ["near-store/protocol_feature_flat_state", "near-chain/protocol_feature_flat_state", "node-runtime/protocol_feature_flat_state"]

nightly = [
  "nightly_protocol",
  "near-primitives/nightly",
  "near-client/nightly",
  "near-epoch-manager/nightly",
  "near-store/nightly",
  "protocol_feature_fix_staking_threshold",
  "protocol_feature_fix_contract_loading_cost",
]
nightly_protocol = [
  "near-primitives/nightly_protocol",
  "near-jsonrpc/nightly_protocol",
]

# Force usage of a specific wasm vm irrespective of protocol version.
force_wasmer2 = ["near-vm-runner/force_wasmer2"]
force_wasmer0 = ["near-vm-runner/force_wasmer0"]
force_wasmtime = ["near-vm-runner/force_wasmtime"]

sandbox = [
  "near-client/sandbox",
  "node-runtime/sandbox",
  "near-jsonrpc/sandbox",
]
io_trace = ["near-vm-runner/io_trace"]

shardnet = ["near-network/shardnet"]
